@@ -24,7 +24,11 @@ public class TCPServerSocket implements ISocketFactory {
 	    p=Integer.parseInt(DefaultSocketname);
 	}
 	TCPServerSocket s = new TCPServerSocket(p, backlog);
-	new Listener(s.sock).listen();
+        try {
+	    new Listener(s.sock).listen();
+	} catch (Exception ex) {
+	    Util.logMessage("Could not start multicast listener. Load balancing not available: " + ex);
+	}
 	return s;
     }
 
